feat(web): add conflicts screen (#43)
Closes #15
